# map-reduce

./: .gitignore  README.md  pyproject.toml  visual_yandex_maps.ipynb
compgraph/: __init__.py  algorithms.py  graph.py
compgraph/operations/: __init__.py  external_sort.py  joiners.py  mappers.py  operations_base.py  reducers.py
compgraph/operations/utils/: __init__.py  groupby.py  peekable_iterator.py
examples/: run_inverted_index_graph.py  run_pmi_graph.py  run_word_count.py  run_yandex_maps_graph.py
resources/: yandex-maps.json
tests/: graph_cases.py  test_click.py  test_examples.py  test_graph.py  test_operations.py  utils.py
