[build-system]
requires = ["setuptools", "setuptools-scm", "click", "pytest"]
build-backend = "setuptools.build_meta"

[project]
name = "compgraph"
authors = [
    {name = "Max Zakharchenko", email = "n00t-noot@yandex.ru"},
]
description = "Package for map-reduce-like computations"
readme = "LIB_README.md"
requires-python = ">=3.11"
keywords = ["map-reduce"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click"
]
dynamic = ["version"]


[tool.setuptools.packages.find]
include = ["compgraph"]
